# intelligent-personal-management-panel

./: .gitignore  Dockerfile  composer.json  iniciar_todo.bat  package-lock.json  package.json
.next/: build-manifest.json  prerender-manifest.json  trace-build
.next/cache/: .previewinfo  .rscinfo
.next/server/: server-reference-manifest.json
Downloads/catalogo/: README.md  package-lock.json  package.json  server.js
Downloads/intelligent-personal-management-panel/: .gitignore  package-lock.json
app/: globals.css
app/Events/: TareaCreated.php  TareaUpdate.php  TransactionCreated.php
app/Listeners/: SendTaskReminder.php  SendTransactionNotification.php
app/Models/: Habito.php  HabitoRegistro.php  IosDevice.php  Tarea.php  Transaccion.php  User.php
app/Notifications/: ResetPasswordNotification.php
app/Providers/: AppServiceProvider.php  EventServiceProvider.php
app/Services/: AppleNotificationService.php  MailService.php  MonitoringService.php  NotificationService.php  SecurityService.php
bootstrap/: app.php
bootstrap/cache/: services.php
config/: app.php  logging.php  mail.php  production.php  queue.php  services.php
database/migrations/: 2024_01_01_000002_create_tareas_table.php  2024_01_01_000003_create_habitos_table.php
public/: .htaccess
resources/css/: app.css
services/go/: Dockerfile  README.md  go.mod  main.go
services/rust/: Cargo.toml
services/rust/src/: Dockerfile  README.md  audit.rs  config.rs  crypto.rs  main.rs  rate_limiter.rs  validation.rs
services/swift/: NotificationManager.swift  Package.resolved  Package.swift
(+93 files in other folders)
