[package]
name = "security-service"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.21"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"
lazy_static = "1.4"
parking_lot = "0.12"
thiserror = "1.0"

# Librerías de seguridad especializada
ring = "0.17"
x25519-dalek = "2.0"
ed25519-dalek = "2.1"
hkdf = "0.12"

# Auditoría y logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Rate limiting y control de acceso
governor = "0.6"

# HTTP client para comunicación con Laravel
reqwest = { version = "0.11", features = ["json", "cookies"] }

[[bin]]
name = "security-service"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
